--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -61,6 +61,10 @@
     <Compile Include="Migrations\201909210418212_AddCustomers.Designer.cs">
       <DependentUpon>201909210418212_AddCustomers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909220652319_AddedOrders.cs" />
+    <Compile Include="Migrations\201909220652319_AddedOrders.Designer.cs">
+      <DependentUpon>201909220652319_AddedOrders.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -83,6 +87,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909210418212_AddCustomers.resx">
       <DependentUpon>201909210418212_AddCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909220652319_AddedOrders.resx">
+      <DependentUpon>201909220652319_AddedOrders.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
