--- a/MyShop/MyShop.Services/MyShop.Services.csproj
+++ b/MyShop/MyShop.Services/MyShop.Services.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasketService.cs" />
-    <Compile Include="IBasketService.cs" />
+    <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
